Fixed div overlapping issue

--- a/themes/my_theme/sass/style.scss
+++ b/themes/my_theme/sass/style.scss
@@ -37,7 +37,7 @@ nav {
   width: 100%;
   margin: 0 auto;
   height: 60px;
-  
+  opacity: 0.85;
   .img{
     display: inline-block;
     margin: 0 auto;
@@ -130,11 +130,14 @@ nav {
   }
   p{
     line-height: 36px;
+    color: #999;
+    font-size: 14px;
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
 #skills {
-  height:100vh;
   width: 100%;
   padding-top: $div-content-padding; 
   padding-bottom: $div-content-padding; 
@@ -148,12 +151,15 @@ nav {
   }
   p{
     line-height: 36px;
+    color: #999;
+    font-size: 14px;
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
 #work {
   width: 100%;
-  height:100vh;
   display:block;
   padding-top: $div-content-padding; 
   padding-bottom: $div-content-padding; 
@@ -172,6 +178,10 @@ nav {
   }
   p{
     line-height: 36px;
+    color: #999;
+    font-size: 14px;
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
@@ -194,6 +204,10 @@ nav {
   }
   p{
     line-height: 36px;
+    color: #999;
+    font-size: 14px;
+    width: 80%;
+    margin: 0 auto;
   }
   
 }
